# PP2Project

./: CMakeLists.txt  CMakeLists.txt.user.2cf5c49  README.md
data/dict/: categories.txt  chartraits.txt  clothing.txt  colours.txt  custom.txt  emotions.txt  foods.txt  furniture.txt  geopl.txt  geoworld.txt  items.txt  names.txt  phystraits.txt  transport.txt
data/net/: landmark_recognizer.py  pjmrecognizer.onnx  test.onnx
src/: CMakeLists.txt  capturewidget.cpp  capturewidget.h  functions.cpp  functions.h  generatorwidget.cpp  generatorwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  pylandmarkrecognizer.cpp  pylandmarkrecognizer.h  styles.cpp  styles.h
